Update with remote theme

--- a/_config.yml
+++ b/_config.yml
@@ -12,6 +12,8 @@ sections:
 - name: Accepted Papers
   title: Accepted Papers
 url: http://proceedings.mlr.press
+author:
+  name: PMLR
 layout: proceedings
 series: Proceedings of Machine Learning Research
 issn: 2640-3498
