--- a/_config.yml
+++ b/_config.yml
@@ -45,6 +45,7 @@ baseurl: "/v101"
 twitter_username: MLResearchPress
 github_username: mlresearch
 markdown: kramdown
+style: pmlr
 plugins:
 - jekyll-remote-theme
 remote_theme: lawrennd/proceedings
