--- a/_config.yml
+++ b/_config.yml
@@ -46,6 +46,8 @@ twitter_username: MLResearchPress
 github_username: mlresearch
 markdown: kramdown
 plugins:
+- jekyll-feed
+- jekyll-seo-tag
 - jekyll-remote-theme
 style: pmlr
 remote_theme: lawrennd/proceedings
