--- a/_config.yml
+++ b/_config.yml
@@ -56,7 +56,7 @@ plugins:
 - jekyll-seo-tag
 - jekyll-remote-theme
 style: pmlr
-remote_theme: lawrennd/proceedings
+remote_theme: mlresearch/jekyll-theme
 permalink: "/:title.html"
 ghub:
   edit: true
